       - Skips over the reading of reports in "satwnd" dump coming from tanks
         NC005080 (AVHRR POES) and NC005090 (VIIRS POES) since these cannot be
         processed by this program.
         BENEFIT:  Prevents diagnostic "invalid producer/sat combination"
                   printout from being generated for every report in these two
                   tanks.
      iw3unpbf.f (subroutine):
       - Added logic to handle new NASA/VIIRS (NPP) POES winds in tank NC005090
         (e.g., recognizes that they now exist, counts of reports with flagged
         QI values, counts of reports by satellite number). Added logic to
         properly handle GOES IR short-wave winds in tank NC005019 (e.g., new
         instrument type 19, process the quality information correctly). Added
         some missing logic which summarizes processing of NESDIS/AVHRR POES
         winds in tank NC005080 (e.g., counts of reports by satellite number).
         BENEFIT: NASA/VIIRS (NPP) POES winds, GOES IR short-wave winds and
                  NESDIS/AVHRR POES winds will all be translated properly from
                  the "satwnd" dumps.  (Although they will not be processed by
                  prepobs_prepdata they are listed by bufr_listdumps which uses
                  this same dump-interface subroutine.)


 Output changes:
 ---------------
  (For specific network changes see " Output changes" in Release Notes for that
   network, if that network executes this version of obsproc_prep.)


 Libraries:
 ----------
   w3nco   2.0.6 (all)
   bufr   10.2.5 (all)
   w3emc   2.2.0 (prepobs_cqcbufr, prepobs_prepacpf, prepobs_prepacqc,
                  prepobs_prepdata, prepobs_prevents, syndat_syndata)
   bacio   2.0.1 (prepobs_prepdata, prepobs_prevents, syndat_syndata)
   sp      2.0.2 (prepobs_prepdata, prepobs_prevents, syndat_syndata)
   sigio   1.0.1 (prepobs_prepdata, prepobs_prevents, syndat_syndata)


 Build Instructions:
 -------------------
   - See sorc/README.build

