@@ -1,7 +1,7 @@
 C$$$  MAIN PROGRAM DOCUMENTATION BLOCK
 C
 C MAIN PROGRAM: PREPOBS_PREPDATA
-C   PRGMMR: KEYSER                ORG: NP22   DATE: 2015-01-30
+C   PRGMMR: KEYSER                ORG: NP22   DATE: 2015-03-09
 C
 C ABSTRACT: PREPARES DATA FOR USE IN ANALYSES FOR THE NDAS, NAM, GDAS,
 C   GFS, RAP (RAPID REFRESH), RTMA, AND URMA NETWORKS.  ALL ANALYSES
@@ -1111,6 +1111,10 @@ C     produced from GOES but are not processed by this program. Skips
 C     over the reading of reports in "satwnd" dump coming from tanks
 C     NC005080 (AVHRR POES) and NC005090 (VIIRS POES) since these
 C     cannot be processed by this program.
+C 2015-03-09  D. A. Keyser -- In subr. UNPREPBF, accounts for new
+C     output argument "CBULL" returned from IW3UNPBF for unpacked
+C     reports (character*11 string containing WMO bulletin header and
+C     originator - filled only for aircraft types right now).
 C
 C USAGE:
 C   INPUT FILES:
@@ -2826,7 +2830,7 @@ C  IN INTERFACE WITH SUBROUTINE IW3UNPBF
      $ FLACMS,IACFTH,SUBSKP,JPGPSD,GWINDO,RASS,TWINDO,JPWDSD,IWWNDO,
      $ FLDMFR,WRMISS,SKGP45,JPASCD,IAWNDO,npkrpt
       NAMELIST/PARM/IUNIT
-      CALL W3TAGB('PREPOBS_PREPDATA',2014,0329,0061,'NP22')
+      CALL W3TAGB('PREPOBS_PREPDATA',2015,0068,0061,'NP22')
 C DETERMINE MACHINE WORD LENGTH (BYTES) FOR BOTH INTEGERS AND REALS
       CALL WORDLENGTH(LWI,LWR)
       PRINT 2213, LWI,LWR
@@ -2869,7 +2873,7 @@ C    CARDS FILE, JUST AFTER NAMELIST TASK, BY THE MAKE_PREPBUFR SCRIPT)
          PRINT 321, NET(1)
       END IF
   321 FORMAT(/37X,'WELCOME TO THE UNIVERSAL ',A14,' DATA PREPROCESSOR'/
-     $ 48X,'WCOSS VERSION CREATED 25 NOV 2014'/)
+     $ 48X,'WCOSS VERSION CREATED 09 MAR 2015'/)
       PRINT 322, (IUNIT(I),I=1,8),IUNIT(16),IUNIT(17)
   322 FORMAT(//53X,'TABLE OF UNIT NUMBERS'/31X,
      $ 'INPUTS IN UNIT NUMBERS 11-50 - OUTPUTS IN UNIT NUMBERS 51-90'//
@@ -4555,7 +4559,7 @@ C***********************************************************************
 C$$$  SUBPROGRAM DOCUMENTATION BLOCK
 C
 C SUBPROGRAM:    UNPREPBF
-C   PRGMMR: D. A. KEYSER     ORG: NP22       DATE: 2007-09-14
+C   PRGMMR: D. A. KEYSER     ORG: NP22       DATE: 2015-03-09
 C
 C ABSTRACT: GENERALIZED CODE TO UNPACK RPTS FROM BUFR DATA SETS VIA
 C   FCN IW3UNPBF.  REPORTS ARE PLACED INTO SPECIFIED UNPACKED FORMAT.
@@ -4597,6 +4601,10 @@ C     OBS3(X,Y,1) TO OBS3(X,Y,5) ARRAYS (SEE IW3UNPBF DOCBLOCK FOR MORE
 C     INFO)
 C 2007-09-14  D. A. KEYSER -- BUMP UP ARRAY SIZE FOR UNPACKED REPORT
 C     FROM IW3UNPBF FROM 3000 TO 3500
+C 2015-03-09  D. A. KEYSER -- Accounts for new output argument "CBULL"
+C     returned from IW3UNPBF for unpacked reports (character*11 string
+C     containing wmo bulletin header and originator - filled only for
+C     aircraft types right now).
 C
 C USAGE:    CALL UNPREPBF(IFLAG,CYCLET,IOPENED,DSNAME,IDSDAT,IDSDMP_8,*)
 C   INPUT  ARGUMENT LIST:
@@ -4647,6 +4655,7 @@ C$$$
       PARAMETER (MAXOBS = 3500)
       PARAMETER (NUMOBS2 = 43)
       CHARACTER*8   STNID,CRES1,CRES2,DSNAME,SUBSET_d
+      CHARACTER*11  CBULL
       INTEGER  IDATA(MAXOBS),MDATE(4)
       INTEGER(8) IDSDMP_8
       REAL(8)  BMISS
@@ -4674,15 +4683,15 @@ C$$$
       END IF
 
 C CALL IW3UNPBF TO UNPACK AND READ FROM DATA SET --> RDATA, STNID,
-C  CRES1, CRES2, OBS2, OBS3 AND NOBS3 HOLD RETURNED REPORT IN SPECIFIED
-C  UNPACKED FORMAT {UNLESS FIRST CALL WHICH SHOULD RETURN JUST THE DATA
-C  SET INFO (DSNAME, IDSDAT AND IDSDMP_8)}
+C  CRES1, CRES2, CBULL, OBS2, OBS3 AND NOBS3 HOLD RETURNED REPORT IN
+C  SPECIFIED UNPACKED FORMAT {UNLESS FIRST CALL WHICH SHOULD RETURN
+C  JUST THE DATA SET INFO (DSNAME, IDSDAT AND IDSDMP_8)}
       OBS2   = BMISS  ! initialize obs2   array before reading any rpts
       OBS3   = BMISS  ! initialize obs3   array before reading any rpts
       NOBS3  = 0      ! initialize nobs3  array before reading any rpts
       RDATA2 = BMISS  ! initialize rdata2 array before reading any rpts
-      IF(IW3UNPBF(NFILE,RDATA,STNID,CRES1,CRES2,OBS2,OBS3,NOBS3,DSNAME,
-     $ IDSDAT,IDSDMP_8,SUBSET_d,SUBSKP,IER).EQ.0)  GO TO 50
+      IF(IW3UNPBF(NFILE,RDATA,STNID,CRES1,CRES2,CBULL,OBS2,OBS3,NOBS3,
+     $ DSNAME,IDSDAT,IDSDMP_8,SUBSET_d,SUBSKP,IER).EQ.0)  GO TO 50
    78 CONTINUE
 C-----------------------------------------------------------------------
       IF(IER.EQ.1)  THEN
